--- a/contents/accessible/_section.tex
+++ b/contents/accessible/_section.tex
@@ -1,6 +1,6 @@
 \section{Accessible}
 
-The data is considered accessible by the user when they do not need to make an excessive effort to
+The data is considered accessible by the user when they do not need to make an excessive effort
 to obtain it, understand it and use it, that is, apply them to their particular situation. To achieve these objectives,
 it is necessary that the user can access them in a way that is familiar and in a language and nomenclature
 they can understand.\\ 
