--- a/contents/accessible/make_your_data_available.tex
+++ b/contents/accessible/make_your_data_available.tex
@@ -7,7 +7,7 @@ mean that they are readily \emph{accessible} to average users, for the following
     \item \textbf{Location}. Datasets are usually available in open data portals that have been organized and structured not for ease of use, but according to some
           organisational convenience. 
           Despite more companies attempting to offer functional and efficient user interfaces, often a complicated search and selection process is necessary for a user to find what they need.
-          Sometimes the data may not all be available in the one location, but may require searching through multible portals.
+          Sometimes the data may not all be available in the one location, but may require searching through multiple portals.
 
     \item \textbf{Extraction}. Datasets are often available through an API (Application Programming Interface). Using an API requires specialist knowledge.
           Hopefully there will be a document describing the fields and values presented, and indicating how to actually use the API, but this is not guaranteed.
@@ -35,7 +35,7 @@ Our website uses the air quality data provided by the city of Málaga in its ope
     \subfigure [Category environment]
         {\includegraphics[width=5.5cm]{Figure_4_1_1_b_openDataPortalEnviromentCategory}}
     \vfill
-    \subfigure[GeoJson Document]
+    \subfigure[GeoJSON Document]
         {\centering \includegraphics[width=4.75cm]{Figure_4_1_1_c_geoJsonDocument}}
     \caption{Open Data Portal Málaga}
 \end{figure}
@@ -43,13 +43,13 @@ Our website uses the air quality data provided by the city of Málaga in its ope
 
 \begin{center}
     \bf{ (a) Main page     (b)Category environment\\
-    (c)GeoJsonDocument
+    (c)GeoJSONDocument
         
     Figure 4.1.1. Malaga's open data portal}
 \end{center}
 
 This data portal offers a variety of categories (represented by different icons) indicating classifications of the dataset.
-Once a category is selected, the user is presented with a search bar that allows them to search for specific data using keywords.In 
-this case, if we click on the link, data is displayed in a new tab. The use of software
+Once a category is selected, the user is presented with a search bar that allows them to search for specific data using keywords.
+In this case, if we click on the link, data is displayed in a new tab. The use of software
 for translating the data is not strictly necessary, but we can see that the format (JSON) is not easily readable in human terms.
 Aire Guru offers all the necessary information on a web platform which has been designed to facilitate human understanding. \\
