--- a/contents/accessible/remove_all_barriers_to_access.tex
+++ b/contents/accessible/remove_all_barriers_to_access.tex
@@ -1,6 +1,6 @@
 \subsection{Remove all barriers to access}
 
-There are three surefire ways to deter potential users of your site: registration, payment, and advertising.\\
+There are three sure-fire ways to deter potential users of your site: registration, payment, and advertising.\\
 
 Users hate being asked to provide any information, let alone registering as a user - considering the prevalence of data breaches that are regularly in the news, it is little wonder.
 In many cases registration is used to capture the user so that the site owner can subsequently market to them.
@@ -8,7 +8,7 @@ This is the reality behind the well-known meme "The user \emph{is} the product".
 Collecting data from your users also requires a major effort to ensure the security of the recorded data.
 Finally, laws are continually adjusted to prevent the abuse of user data, and you will have to meet the requirements of these laws in each of the jurisdictions that you operate. \\
 
-Requring payment to access your data is the kiss of death, and is the reason so many providers rely on advertising 
+Requiring payment to access your data is the kiss of death, and is the reason so many providers rely on advertising 
 revenue to support their sites. It is very rare to have data, or a service, that is so intrinsically compelling that
 people are prepared to pay for it.
 Of course, if you are working with third party data you might have no option. \\
@@ -21,16 +21,16 @@ use our site. For small screen sizes it is even more difficult because there is 
 \subsubsection*{Suggested strategies} 
 
 \begin{itemize}
-    \item Don't require the user to login or register unless it is absolutely neccessary, and even then, only for the subset
-    of your data thet requires it.
+    \item Don't require the user to login or register unless it is absolutely necessary, and even then, only for the subset
+    of your data that requires it.
     \item Don't require payment.
-    \item If you must include advertisting, ensure it does not intrude on your content.
+    \item If you must include advertising, ensure it does not intrude on your content.
 \end{itemize}
 
 \subsubsection*{In the context of Aire Guru \ldots} 
 
 Aire Guru is available online completely free of charge. \\
 
-Aire Gure only requires login to show the record of the user's exposure to pollution. All other funtionality is available without requiring any identification. \\
+Aire Guru only requires login to show the record of the user's exposure to pollution. All other functionality is available without requiring any identification. \\
 
 Aire Guru does not include advertising.
