--- a/contents/aire_guru/_section.tex
+++ b/contents/aire_guru/_section.tex
@@ -4,7 +4,7 @@ Urban residents are surrounded by many sources of air pollution, and it is the d
 This is particularly true for high-risk groups like children and the elderly.
 The WHO (World Health Organization) estimates that there are 4.2 million deaths (https://www.who.int/airpollution/ambient/en/) per year due to air pollution.\\
 
-Air pollution has a significant affect on people with asthma, cardiopathies, allergies, and neurological pathologies.
+Air pollution has a significant effect on people with asthma, cardiopathies, allergies, and neurological pathologies.
 Air pollution not only aggravates existing diseases, but can also be an initial cause of them, such as in the case of foetal brain damage
 (https://www.cronicabalear.es/2018/07/la-contaminacion-ambiental-causa-enfermedades-neurologicas-y-envejecimiento-del-cerebro)
 caused by the mother's exposure to air pollution.\\
@@ -52,15 +52,15 @@ As mentioned before, the data is provided on the Malaga's open data portal.
 This is not a intuitive place to search for air pollution information for the average user.
 Aire Guru provides the information in a way that is easier for the user - in a browser.\\
 
-The data offered in the open data portal is in GeoJson format.
+The data offered in the open data portal is in GeoJSON format.
 This format is highly structured and easy to process given the appropriate software expertise. It is not usable by the general public in this form however.
-The data model contains multiple readings of different kinds, such as qualitative and quantitive measurements from fixed and mobile sensors.
+The data model contains multiple readings of different kinds, such as qualitative and quantitative measurements from fixed and mobile sensors.
 Different sensors provide different sets of fields.
-Aire Guru is able to proccess all of them and offer the user an unified vision of the measurements offered by all the stations.\\
+Aire Guru is able to process all of them and offer the user an unified vision of the measurements offered by all the stations.\\
 
 The Aire Guru data collection and transformation pipeline is fully automated, and runs without any human intervention or management.
-The senors provide hourly data, and the Aire Guru interface reflects this granularity, represent the data with the same periodicity.
-Aire Guru translate the raw sensor data into understandable, useful, actionable information, using graphs, icons, colors and text. 
+The sensors provide hourly data, and the Aire Guru interface reflects this granularity, represent the data with the same periodicity.
+Aire Guru translate the raw sensor data into understandable, useful, actionable information, using graphs, icons, colours and text. 
 It enables the user to easily visualize the pollution in a specific area, both at the current time and historically. We maintain
 a historical log of data, so that the user is able to visualize the evolution of pollutants since 2018. The user can also track their personal exposure
 to these pollutants over the same period of time either by enabling location tracking on their mobile device, or by importing their own location
@@ -73,7 +73,7 @@ data. Finally, Aire Guru presents information about the health consequences of p
 \end{figure}
 
 \begin{center}
-    \bf Figure 2.1. Arquitecture Aire Guru\\
+    \bf Figure 2.1. Architecture of Aire Guru\\
 \end{center}
 
 \begin{figure}[ht]
@@ -83,7 +83,7 @@ data. Finally, Aire Guru presents information about the health consequences of p
 \end{figure}
 
 \begin{center}
-    \bf Figure 2.2. Aire Guru. Web Interface\\
+    \bf Figure 2.2. Aire Guru Web Interface\\
 \end{center}
 
 To enable access by the majority of the population, Aire Guru is available at the web addresses https://www.aire.guru and https://www.airquality.guru.
