--- a/contents/aire_guru/evaluation.tex
+++ b/contents/aire_guru/evaluation.tex
@@ -1,11 +1,11 @@
 \subsection*{Evaluation}
 
 The system has been successfully tested with 14 subject in the Spanish city of Málaga.
-The survey showed a high degree of satisfaction, particularly regarding the clarity and completeness of the the information and analysis,
-useability, interpretability, and depth of information presented.\\
+The survey showed a high degree of satisfaction, particularly regarding the clarity and completeness of the information and analysis,
+usability, interpretability, and depth of information presented.\\
 
 After a week, test users completed a survey that contained questions about how understandable the information was and how useable it was
-Additionally, respondants could make their own comments.\\
+Additionally, respondents could make their own comments.\\
 
 Most of the respondents agreed that the functionality they liked the most, was to see the air quality index actually in the map, and suggested increasing the number of zones.
 92 \% of the respondents found the information useful and complete, and 72 \% answered that they also found it understandable.\\
