--- a/contents/compelling/engage_the_user_on_an_emotional_level.tex
+++ b/contents/compelling/engage_the_user_on_an_emotional_level.tex
@@ -16,9 +16,9 @@ emotional impulses. We may wish the world to be a rational place driven by the c
 \begin{itemize}
 
     \item Create desire. Whether that is a desire to know more, a desire to see 'what happens next' or a desire to avoid a negative outcome.
-    Avoiding a negative outcome innevitably involves invoking some fear. Before we cast this as some Machiavellian evil, consider that the simple
+    Avoiding a negative outcome inevitably involves invoking some fear. Before we cast this as some Machiavellian evil, consider that the simple
     technique of using a stop sign, radioactivity icon, or red text as a way of indicating danger or some situation that requires attention, is an
-    application of exactly this technique. We are invoking a fear-response, however mild.
+    application of exactly this technique. We are invoking a fear response, however mild.
 
     \item Maintain desire. Desire can be maintained by creating an ongoing narrative, or letting the data tell a story. This can be as simple as showing the change in 
     values over time, or can be more complex, such as involving not only changing values over time, but also showing the relationship between causes and
@@ -35,7 +35,7 @@ Aire-Guru uses three specific techniques to generate emotional engagement:
 \begin{itemize}
 
     \item The simplest technique is the use of the colour red to indicate dangerous levels of pollutants, and green to indicate low levels.
-    Additionaly, we use a gas-mask icon to indicate an over-all dangerous level of pollutants.
+    Additionally, we use a gas-mask icon to indicate an over-all dangerous level of pollutants.
 
     \item By linking the pollutant levels to specific medical conditions, users get a very visceral interpretation of the data.
     
