--- a/contents/compelling/solve_a_real_problem.tex
+++ b/contents/compelling/solve_a_real_problem.tex
@@ -3,7 +3,7 @@
 The history of the internet is littered with solutions to non-problems.
 It is very easy as scientists and engineers to get excited about what is possible, without considering if it is actually
 useful. So it is important to consider if having access to your data is actually going to solve a real problem that your
-users have. This is not the same thing as saying that their is a \emph{demand} for your data, because it is entirely possible 
+users have. This is not the same thing as saying that there is a \emph{demand} for your data, because it is entirely possible 
 the you can solve a problem that users don't currently realize they have.
 Maybe your major task is to let he see how useful your data can be.\\
 
@@ -12,9 +12,9 @@ Maybe your major task is to let he see how useful your data can be.\\
 \begin{itemize}
     \item Put yourself in your user's shoes, and consider how your data may be of practical benefit.
     % \item Next we have to find a way to let him see because they are important to him and how he can benefit from using them in his daily life.
-    % \item If the data is updated periodically, it is necessary to analyze what type of variations are important in the user's daily life.
+    % \item If the data is updated periodically, it is necessary to analyse what type of variations are important in the user's daily life.
     % Conduct a market study and see if there are already products that offer this information.
-    % If this is the case, it will be analyzed because it is attractive to the user and try to improve it.
+    % If this is the case, it will be analysed because it is attractive to the user and try to improve it.
 \end{itemize}
 
 \subsubsection*{In the context of Aire Guru \ldots} 
