--- a/contents/compelling/use_a_familiar_and_obvious_user_interface.tex
+++ b/contents/compelling/use_a_familiar_and_obvious_user_interface.tex
@@ -9,8 +9,8 @@ If a calendar is used for the selection of dates, it doesn't make sense to use a
 
 A simple interface is one shorn of unnecessary ornamentation. In particular effects such as transparency, blurring and needless animation.
 Simple interfaces avoid distracting the user. Remember that less is more.
-A complicated design, with too many colors and too many different abstract shapes will be more difficult to interpret.
-Data representations shoulw be unambiguous.
+A complicated design, with too many colours and too many different abstract shapes will be more difficult to interpret.
+Data representations should be unambiguous.
 Do not show information that is deceptive, or that requires time wasted in interpretation.
 When representing the information include only what is truly necessary, always avoiding ornate graphics that only contribute noise to the representation.\\
 
@@ -35,16 +35,16 @@ It is important to give the user a degree of flexibility, that is, to enable the
 \subsubsection*{In the context of Aire Guru \ldots}
 
 Aire Guru uses an interpretation of Google's Material Design, which is very clean, without borders or decorations.
-We chose a range of blue shades in combination with white and gray to evoke a relaxed atmosphere.
+We chose a range of blue shades in combination with white and grey to evoke a relaxed atmosphere.
 Importantly, we've taken care that all text has a good level of contrast with the background, so that it is easy to read.
 The graphics have been designed in 2D, since they are easier to interpret and we lack the ambiguity that can occur when using depth as a measure.\\
 
-Aire Guru consists of multiple sections, and the workflow both within and between the different sections was explicitly modeled.
+Aire Guru consists of multiple sections, and the workflow both within and between the different sections was explicitly modelled.
 The representation follows a logical sequence.
 By selecting a point on the map, or allowing Aire Guru to read our position, we will show detailed information for this point.
 The next section filters the information according to the preferences of the user and lastly, it shows the history of pollutants since 2018 and the history of the pollution to which the user has been exposed.\\
 
-We use repeated structures, and the same style, colors and iconography are used throughout the design so that the user can quickly become familiar with how it works, and can
+We use repeated structures, and the same style, colours and iconography are used throughout the design so that the user can quickly become familiar with how it works, and can
 concentrate on the meaning of the data, rather than being distracted by trying to figure out what to do.
 We use GoogleMaps controls because users are already familiar with both the representation and the interactive controls.
 We use clouds to represent air quality measurements, accompanied by a heart if the quality is good, by an exclamation mark if it is poor, by a cross if it is bad, and we change to a gas mask if the state is unhealthy.\\
