--- a/contents/compelling/your_site_should_look_good.tex
+++ b/contents/compelling/your_site_should_look_good.tex
@@ -7,12 +7,12 @@ This is similar to the importance of good data presentation, using a structure t
 Other more technical characteristics are:
 \begin{itemize}
     \item\textbf{Consistent} Controls that perform similar actions should have the similar appearance.
-    A label with different typology or other color may jarr the user's perception. Use strong colours sparingly, when
+    A label with different typology or other color may jar the user's perception. Use strong colours sparingly, when
     you want to highlight something in particular. \\
 
     \item\textbf{Clean and well-organized} An organized design looks better, give a more peaceful feeling and enables the user to find what they are looking for more easily. \\ 
 
-    \item\textbf{Branded} It is highly recommended to 'brand' yourself, so that users can recognize you quickly. For this you can utilize a symbol, a combination of colors, a logo, or a device.
+    \item\textbf{Branded} It is highly recommended to 'brand' yourself, so that users can recognize you quickly. For this you can utilize a symbol, a combination of colours, a logo, or a device.
     All the value arising from the quality of your product will accrue to your brand. It is an asset that can be reused in other contexts. \\
 \end{itemize}
 
@@ -30,9 +30,9 @@ Other more technical characteristics are:
 \subsubsection*{In the context of Aire Guru \ldots}
 
 The visual design of Aire Guru is based on Google's Material Design, using straight lines, differentiating individual sections by using rectangles
-and using colors that contrast the information from the background.
+and using colours that contrast the information from the background.
 The background color for the graphics is a neutral white.
-Only shades of blue, gray and white are used. In addition, we chose a font that is easy to read.\\
+Only shades of blue, grey and white are used. In addition, we chose a font that is easy to read.\\
 
 The sections are arranged neatly and regularly, and structured by using a header and a body.\\
 
