--- a/contents/introduction/_section.tex
+++ b/contents/introduction/_section.tex
@@ -17,8 +17,8 @@ circumstance, visualizes it in an easy to understand format, and provides it onl
 descriptions of all the data and how it has been processed are also provided to raise public awareness of the value
 of this data.\\
 
-While developing Aire Guru, and later reflecting on the process and success of the project, we we motivated to codify
+While developing Aire Guru, and later reflecting on the process and success of the project, we were motivated to codify
 some of the lessons learnt in bringing somewhat dry and technical data to the general public, in a way that made it 
-accessible, relevent, and compelling.\\
+accessible, relevant, and compelling.\\
 
 \input{contents/introduction/structure_of_this_document.tex}
