--- a/contents/introduction/structure_of_this_document.tex
+++ b/contents/introduction/structure_of_this_document.tex
@@ -10,7 +10,7 @@ Firstly, we deal with general preliminaries, that in a commercial context would 
 'Market Research' and 'The Business Case'. These ideas are just as applicable to the delivery of
 public-good data as commercial offerings. \\
 
-We then present 14 specific principles, classified into three categories: Accessible, Relevent, and Compelling.
+We then present 14 specific principles, classified into three categories: Accessible, Relevant, and Compelling.
 Each principle is described, along with suggested strategies to achieve that goal, and we then show
 how that principle is reflected in the context of our Aire Guru project. We conclude with some
 general comments, and provide a suggested reading list for each major section. \\
