--- a/contents/preliminaries/understand_your_purpose.tex
+++ b/contents/preliminaries/understand_your_purpose.tex
@@ -30,7 +30,7 @@ so we must be flexible and adapt to find the perfect formula. \\
 \subsubsection*{Suggested strategies}
 
 \begin{itemize}
-    \item Study and analyze what the current gaps in the market are, and what needs the user might have that aren't being met.
+    \item Study and analyse the current gaps in the market, and what needs the user might have that aren't being met.
     \item Define your target audience. What do they use in their daily life to keep informed or for entertainment?
     What type of advertising do they already consume? How can we get closer to them?
     \item Keep in mind that we must stay faithful to the spirit of what we represent, so as well as understanding what advertising fits the user,
