--- a/contents/relevant/_section.tex
+++ b/contents/relevant/_section.tex
@@ -1,11 +1,11 @@
 \section{Relevant}
 
-A good representation of the data is not about showing every detail. What is helpful, is showing the user what is relevant and neccessary for their purpose.
+A good representation of the data is not about showing every detail. What is helpful, is showing the user what is relevant and necessary for their purpose.
 
 In this section we consider three questions related to making sure your data is relevant to your users:
 
 \begin{itemize}
-    \item Are you overwhelming your user with irrelvencies?
+    \item Are you overwhelming your user with irrelevencies?
     \item What are the real-life consequences that your data indicates?
     \item Is your data customized for each user?
 \end{itemize}
