--- a/contents/relevant/personalize_the_data_for_each_user.tex
+++ b/contents/relevant/personalize_the_data_for_each_user.tex
@@ -1,11 +1,11 @@
 \subsection{Personalize the data for each user}
 
-The most powerful technique to ensure that your data is relevent to your users, is to customize it 
-for each user. Obviously there is a tradeoff here because you need some information about the user,
+The most powerful technique to ensure that your data is relevant to your users, is to customize it 
+for each user. Obviously there is a trade-off here because you need some information about the user,
 but if the information is transient i.e. not stored on your server, but only on the browser, then this
 is not an issue. A good example of this transient customisation is persistent filtering - when the user enters
 their details, you can filter the data to show information specific to those details,
-such as automatically pivoting or limiting the data to the user's age, gender, location, specific interests, economic circumstance, physical chacteristics etc.\\
+such as automatically pivoting or limiting the data to the user's age, gender, location, specific interests, economic circumstance, physical characteristics etc.\\
 
 It is possible to do very sophisticated customisation using a single page web application, and it is
 even possible to store data between visits, on the browser, avoiding security and information collection issues that
@@ -57,7 +57,7 @@ For this, it is essential to read the user's position. By matching the users loc
 we can find the level of exposure to pollutants. If the user gives us his permission to store this data, we can show them their personalized history.
 We implement mechanisms that provide us with the necessary security to safeguard our users data.\\
 
-This functionality is the most powerful tool in Aire Guru. Other platforms require user-level measurement devices, ie the user must carry
+This functionality is the most powerful tool in Aire Guru. Other platforms require user-level measurement devices, i.e. the user must carry
 a portable measurement station that monitors the different pollutants.\\
 
 \begin{figure}[ht]
