--- a/contents/relevant/the_facts_and_just_the_facts.tex
+++ b/contents/relevant/the_facts_and_just_the_facts.tex
@@ -1,6 +1,6 @@
 \subsection{The facts, and just the facts}
 
-It is not unusual to make the mistake of trying to give the user too much information, offering unneccessary or redundant data.
+It is not unusual to make the mistake of trying to give the user too much information, offering unnecessary or redundant data.
 We don't want the user to be distracted or lost in the middle of a technically complete, but overly complex dataset. \\
 
 The objective is not to create users with specialized knowledge of the field of your data, but rather to provide them with the
@@ -65,4 +65,4 @@ the point where the measure was taken since it has been selected in the main map
 
 Aire Guru provides the user with the ability to export the data. The comments of our testers revealed
 that this functionality is not useful for the average user, since they do not have the necessary tools to
-analyze the data and all the information is represented in a better format in the website itself.
+analyse the data and all the information is represented in a better format in the website itself.
