--- a/contents/accessible/use_concepts_and_language_that_your_user_understands.tex
+++ b/contents/accessible/use_concepts_and_language_that_your_user_understands.tex
@@ -23,13 +23,13 @@ the underlying meaning in a natural way.\\
 \subsubsection*{In the context of Aire Guru \ldots} 
 
 The Aire Guru tool presents the information in the native language of the city (Spanish), avoids using difficult scientific terminology, instead using simple vocabulary and a 
-straightforward style. Colors and graphic resources are used, as are icons. In addition, the site uses a unified design language to represent data,
+straightforward style. Colours and graphic resources are used, as are icons. In addition, the site uses a unified design language to represent data,
 giving the user a consistent visualization experience. \\
 
 One of the objectives is to represent pollution by geographic area of the city, which is why a map has been used - the 
 obvious and familiar visual image of the different places in the city. The pollution index shows an indicator with 
 five levels represented by a color scale from turquoise to red - "Good" "Fair" "Poor" "Bad" and "Unhealthy". 
-This color-coding is consistent with the colors which are used in official sources, thereby avoiding confusion for any 
+This color-coding is consistent with the colours which are used in official sources, thereby avoiding confusion for any 
 user who might consult official sources.
 
 \begin{figure}[ht]
@@ -43,7 +43,7 @@ user who might consult official sources.
 \end{center}
 
 These icons represented in the Figure 4.4.2 are used to help the user get an immediate idea of the pollution level, since they are even more
-decriptive and self-explanatory than just colors alone. Danger is, of course, almost universally indicated by 
+descriptive and self-explanatory than just colours alone. Danger is, of course, almost universally indicated by 
 the colour red, and is therefore used appropriately. However, not all cultures have the same perception about
 blue or green, missing what they indicate. In this case we have a limited geographic market, so it isn't an issue.\\
 
