--- a/contents/frontmatter/abstract.tex
+++ b/contents/frontmatter/abstract.tex
@@ -1,6 +1,6 @@
 The steps involved in collecting, analysing and making important datasets available to the general public are well understood. \\
 
-But how do we make such data accessible, relevent, and compelling for the average user?. \\
+But how do we make such data accessible, relevant, and compelling for the average user?. \\
 
 In this chapter we provide a framework for considering this question, providing guidance and checklists,
 and show how we applied this framework in the development of the Aire Guru website developed by the first
