--- a/contents/preliminaries/know_your_user.tex
+++ b/contents/preliminaries/know_your_user.tex
@@ -1,9 +1,9 @@
 \subsection{Know your user}
 
-Asssisting the user - our client - is our primary purpose. \\
+Assisting the user - our client - is our primary purpose. \\
 
 We must be aware of the needs of our users in order to meet their demands, as well as being aware of deficiencies in the market, so we can cover any 'holes'.
-In the case of public-good data, you also need to consider how to meet the needs of certain groups of users who might be disadvataged in some way.\\
+In the case of public-good data, you also need to consider how to meet the needs of certain groups of users who might be disadvantaged in some way.\\
 
 % TODO: not sure what this means.
 % Whether our target audience is unique, that is, take all types of users equally, considering the
@@ -22,7 +22,7 @@ and/or surveys.\\
     \item Define the characteristics of your users. Study both their characteristics and the situation of the
     market.
     \item Use a mechanism that helps us obtain feedback, either by a system of points, test or
-    an automatic mechanism that allows tracking the behavior of the user. We can also choose the combination of both
+    an automatic mechanism that allows tracking the behaviour of the user. We can also choose the combination of both
     options.
 \end{itemize}
 
@@ -35,13 +35,13 @@ disease or medical condition, caused or affected by air pollution.\\
 We mentioned previous that we discovered a number of deficiencies in existing websites. In addition the following specific gaps in functionality were discovered:
 
 \begin{itemize}
-    \item No ability to track exposure over time. We are interested to know the level of pullution we are exposed over the long term, not only at a specific instant.
+    \item No ability to track exposure over time. We are interested to know the level of pollution we are exposed over the long term, not only at a specific instant.
     \item Overly complicated presentation, suitable more for further analysis than presentation to the general public.
     \item No of explanation of the consequences of pollution exposure, particularly their influence on health or medical conditions.
 \end{itemize}
 
 Once Aire Guru was operational, we tested it with 14 identified users. Our website integrates Google Analytics that allow us to evaluate
-user behavior, how many pages they access, and how long they stay on each page.
+user behaviour, how many pages they access, and how long they stay on each page.
 After testing, we surveyed the users to measure not only the level of overall satisfaction with the website,
 but also to verify the utility and determine if the user was able to achieve their objective.\\
 
