--- a/contents/relevant/present_consequences_and_outcomes.tex
+++ b/contents/relevant/present_consequences_and_outcomes.tex
@@ -1,6 +1,6 @@
 \subsection{Present consequences and outcomes}
 
-It is often the case the the data itself is not interesting to users in-and-of-itself.
+It is often the case that the data itself is not interesting to users in-and-of-itself.
 Rather, what is relevant to the user are the consequences of the reality that the data indicates.
 It is important to dedicate the necessary time to model such consequences, and the ways in which
 those consequences impact the user. The points that should be made clear are: \\
@@ -16,13 +16,13 @@ those consequences impact the user. The points that should be made clear are: \\
 % At a more technical level, it would be the limits or values of what data are those that provide us with information
 % of an exceptional situation, or the values that we are trying to identify more easily. \\
 
-\textbf{Data workflow}. When planning the flow of information, it must be clear how the data is transformed from data points to meaninful consequences and outcomes.
+\textbf{Data workflow}. When planning the flow of information, it must be clear how the data is transformed from data points to meaningful consequences and outcomes.
 
 \subsubsection*{Suggested strategies} 
 
 \begin{itemize}
     \item Once a goal has been set, we must stipulate the necessary fields of the dataset that we need. That is, we select the fields that interest us. 
-    \item Analyze the data provided and see if the list of fields that the source offers us is sufficient to reach the chosen objective.
+    \item Analyse the data provided and see if the list of fields that the source offers us is sufficient to reach the chosen objective.
     If not directly, then via some derived process.
     \item Decide which values are more outstanding and provide them to the user.
 \end{itemize}
@@ -49,7 +49,7 @@ For this we used clinical studies.
 For each of the diseases, we researched the symptoms and how they can be aggravated by each pollutant.
 For each pollutant, we looked for typical sources of pollution, to see if they occur in the city of Málaga and in what concentrations.
 With all this information we determined that the pollutants that have common medical outcomes are \ch{CO}, \ch{NO2}, \ch{O3} and PM (Particulated Material).
-Dfferent levels of particles affect different diseases in different ways.
+Different levels of particles affect different diseases in different ways.
 We provide the information we used to justify our derived conclusions in the Glossary of Aire Guru. \\
 
 Once these pollutants were selected, we determined if we have the appropriate data in our dataset.
@@ -60,8 +60,8 @@ Good $\rightarrow 50$, Acceptable $\rightarrow 150$, Poor $\rightarrow 300$, Bad
 and we inform the user that the value is approximated.\\
 
 At this point we know how air pollution affects our health.
-We make very clear which are the undesirable values by using the alert colors, yellow, orange and red.
-These colors are chosen in the palette of the colors provided by the EAQI.
+We make very clear which are the undesirable values by using the alert colours, yellow, orange and red.
+These colours are chosen in the palette of the colours provided by the EAQI.
 In addition, the icon that represents unhealthy levels of pollution, is totally different, designed to clearly convey danger. \\
 
 \begin{figure}[ht]
