--- a/chapter.tex
+++ b/chapter.tex
@@ -22,8 +22,8 @@
 
 \input{contents/frontmatter/_section}
 
-\newpage
-\tableofcontents
+
+%\tableofcontents
 
 % \newpage
 % \listoffigures
@@ -35,6 +35,6 @@
 \input{contents/relevant/_section} 
 \input{contents/compelling/_section} 
 \input{contents/conclusion/_section} 
-% \input{contents/references/_section} 
+\input{contents/references/_section} 
 
 \end{document}
