--- a/contents/references/_section.tex
+++ b/contents/references/_section.tex
@@ -1,87 +1,3 @@
-\section{References}
-
-Braidot, N.P. (2009). Neuromarketing. Ediciones Gestión 2000.\\
-
-Burton, B., Geishecker, L., Hostmann B, Friedman, T. y Newman, D. (2006).
-Organizational Structure: Business Intelligence and Information Management.
-Gartner.\\
-
-Cano, J. L. (2007). Business intelligence: competir con información. Madrid:
-ESADE Business School.\\
-
-Chiasson, T.; Gregory, D. et al. (2014). A simple introduction to preparing and
-visualizing information. Columbia, Missouri: Donald W. Reynolds Journalism
-Institute and Infoactive.\\
-
-Chiasson, T.; Gregory, D. et al. (2014). DATA + DESIGN A simple introduction to
-preparing and visualizing information. Columbia, Missouri: Donald W. Reynolds
-Journalism Institute and Infoactive. \\
-
-Chakrabarti, S. (2003). Mining the Web: Discovering Knowledge from Hypertext Data.
-California. Morgan Kaufmann.\\
-
-Davenport, T., and Prusak, L. (2000). Working Knowledge: How Organizations Manage
-What They Know. Massachuset: Harvard Business Review Press.\\
-
-Davenport, T. H., Barth, P. y Bean, R. (2012). How big data is different. MIT Sloan
-Management Review.\\
-
-Debenham, J. (1998) Knowledge Engineering. Unifying Knowledge Base and Database
-Design. Sydney: Springer.\\
-
-Devlin, B. (1997). Data Warehouse: From Architecture to Implementation. Estados
-Unidos: Addison-Wesley.\\
-
-Eckerson, W. y White. C., (2003). Evaluating ETL and Data Integration Platforms.
-TDWI Report Series.\\
-
-Few, S. (2012). Show me the Numbers. Burlingame, California: Analytics Press.
-Meirelles, I. (2013). Design for Information. Beverly, Massachusetts: Rockport
-Publishers.\\
-
-Han, J., Kamber, M. y Pei, J. (2006). Data Mining, Concepts and Techniques (2º
-edición). Massachusets: Morgan Kaufmann.\\
-
-Jarke, M., Jesusfeld, M.A., Quix, C., and Vassiliadis, P. (1998). Arquitecture and Quality
-of Data Warehouses: An Extended Repository Approach. Advanced Information Systems
-Engineering, Lecture Notes in Computer Science.\\
-
-Kerin, R. (2014). Marketing. McGraw Hill. 
-
-Kirk, A. (2012). Data Visualization: A sucessfull Design Process. Birmingham (UK):
-Packt Publishing.
-
-Lin, T. Y. (2002). Attribute transformation for data mining I: theoretical explorations.
-International Journal of Intelligent Systems.\\
-
-Markham, K. (2018). A Practical Guide to the General Data Protection Regulation (GDPR).Law Brief Publishing \\
-
-Muñiz, R. (2014). Marketing en el siglo XXI. Centro de estudios financieros. \\
-
-Murray, S. (2013). Interactive Data visualization for the Web. Massachusetts (EUA):
-O’Reilly.\\
-
-Parasurman, A. Zaithaml, V. A. y Berry, L. L. (1998). Servqual: a multiple-item scale for
-mesauring consumer perceptions of service quality. Journal of Retailing.\\ 
-
-Pettersson, R. (2013). Information Design 4- Graphic Design. Austria: International
-Institute for Information Design (IID).\\
-
-Redman, T.C. (1996). Data Quality for the Information Age, p. 245-267. Massachusetts:
-Artech House, Inc.\\
-
-Solomon, M.R. (2013). Comportamiento del consumidor. Addison-Wesley.\\
-
-Telea, A. C. (2014). Data Visualization: Principles and practice, second Edition. Ohio
-(EUA): CRC Press. \\
-
-Tufte, E. R. (2001). The Visual Display of Quantitative Information. Cheshire,
-Connecticut: Graphic Press.\\
-
-Ware, C. (2013). Information Visualization. Waltham, Massachusetts: Morgan
-Kaufmann Publishers. \\
-
-Weller, K. (2010). Knowledge Representation in the Social Semantic Web. New York:
-De Gruyter. \\
-
+\section{Reading List}
+\bf{\color {red} THIS SECTION IS STILL UNDER CONSTRUCTION}
 
