--- a/contents/frontmatter/_section.tex
+++ b/contents/frontmatter/_section.tex
@@ -7,14 +7,17 @@
 \author{Antony Blakey}
 \ead{antony@illuminous.io}
 \address{Illuminous\\ Johan van Hasseltweg 43-II, 1021 KN, Amsterdam}
+\begin{comment}
+    
 
 \begin{abstract}
-\input{contents/frontmatter/abstract} 
+input{contents/frontmatter/abstract} 
 \end{abstract}   
+
 
 \begin{keyword}
 Air Quality Index \sep Pollution \sep Monitoring \sep Visualization \sep Analysis \sep Big Data
 \sep Accessible \sep Relevant \sep Compelling
 \end{keyword}
-
+\end{comment}
 \end{frontmatter}
