--- a/chapter.tex
+++ b/chapter.tex
@@ -23,10 +23,10 @@
 \input{contents/frontmatter/_section}
 
 
-%\tableofcontents
-
-% \newpage
-% \listoffigures
+\begin{comment}
+\newpage
+\tableofcontents
+\end{comment}
 
 \input{contents/introduction/_section} 
 \input{contents/aire_guru/_section} 
